--- a/bookapp/package.json
+++ b/bookapp/package.json
@@ -6,7 +6,9 @@
     "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.13",
+    "redux": "^3.7.2",
     "youtube-api-search": "0.0.5"
   },
   "scripts": {
